@@ -3,10 +3,10 @@
 bubbles \- animated bubble display
 .SH SYNOPSIS
 .B bubbles
-[-d \fIDELAY\fP]
+[OPTION]
 .SH OPTIONS
 .TP
-.BI \-d \ DELAY
+\fB\-d\fR, \fB\-\-delay\fR \fIDELAY\fR
 update interval in millisecond. (Default: 500)
 .SH DESCRIPTION
 .IX  "bubbles command"  ""  "\fLbubbles\fP \(em display bubbles"
