@@ -14,12 +14,12 @@ clock \- display the time on a character based display
 .B \-f
 Display the date and day of week on the clock face.
 .TP
-.B \-r
+\fB\-r\fR, \fB\-\-roman\fR
 Use a square
 face with roman numerals.
 This replaces the default round clock face.
 .TP
-.B \-s
+\fB\-s\fR, \fB\-\-second\fR
 Start
 .B clock
 with the seconds turned on.
@@ -28,8 +28,11 @@ off, and updates every minute.
 With seconds turned on, it updates
 every second and displays a second hand.
 .TP
-.B \-d
+\fB\-d\fR, \fB\-\-date\fR
 Display the date and time (in digital format) on the clock face.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Display the help message and exit.
 .TP
 .B title 
 Any other arguments are displayed as a title on the display in deference
